--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,52 @@
-@tailwind base;
+/* @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; */
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+html {
+  /* --scroll-behavior: smooth !important; */
+  scroll-behavior: smooth !important;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@layer base {
+  body {
+    @apply bg-[#f9f9fd] text-[#1f2937] tracking-wide;
+  }
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply font-bold;
+  }
+  h1 {
+    @apply text-4xl sm:text-5xl md:text-6xl;
+  }
+  h2 {
+    @apply text-3xl sm:text-4xl;
+  }
+  li {
+    @apply cursor-pointer;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.btn {
+  border: none;
+  outline: none;
+  background-color: none;
+}
+.btn_shadow {
+  @apply py-[12px] px-[20px] rounded-md transition-all duration-200  ease-in-out cursor-pointer font-bold text-sky-600 hover:text-white bg-gradient-to-br from-gray-300 hover:from-sky-600 to-white hover:to-sky-400 shadow-[4px_4px_8px_#cbcbcb,4px_-4px_8px_#ffffff];
+}
+.btn_projects {
+  @apply py-[6px] px-[10px] rounded-md transition-all duration-200  ease-in-out cursor-pointer text-sm font-semibold text-sky-600 hover:text-white bg-gradient-to-br from-gray-300 hover:from-sky-600 to-white hover:to-sky-400;
+}
+
+.btn_project_details {
+  @apply py-[8px] px-[12px] rounded-md transition-all duration-200 sm:text-xs md:text-sm  ease-in-out cursor-pointer font-bold text-sky-600 hover:text-white bg-gradient-to-br from-gray-300 hover:from-sky-600 to-white hover:to-sky-400 shadow-[4px_4px_8px_#cbcbcb,4px_-4px_8px_#ffffff];
+}
+.custom-container {
+  @apply px-4 sm:px-6 md:px-10 lg:px-24;
 }
